// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrderedList renders with defaults 1`] = `
<DocumentFragment>
  .emotion-3 {
  margin: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  display: block;
}

.emotion-0 {
  padding-left: 4px;
  margin-bottom: 16px;
  margin-left: 24px;
}

<ol
    class="emotion-3"
  >
    <li
      class="emotion-0"
    >
      first node
    </li>
    <li
      class="emotion-0"
    >
      second node
    </li>
    <li
      class="emotion-0"
    >
      third node
    </li>
  </ol>
</DocumentFragment>
`;

exports[`OrderedList renders with invalid nodes 1`] = `
<DocumentFragment>
  .emotion-2 {
  margin: 0;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  display: block;
}

.emotion-0 {
  padding-left: 4px;
  margin-bottom: 16px;
  margin-left: 24px;
}

<ol
    class="emotion-2"
  >
    <li
      class="emotion-0"
    >
      second node
    </li>
    <li
      class="emotion-0"
    >
      third node
    </li>
  </ol>
</DocumentFragment>
`;
